# Autodesk-USD

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md  index.html
build_scripts/: build_usd.py
cmake/defaults/: Options.cmake  Packages.cmake  msvcdefaults.cmake
cmake/macros/: Private.cmake  Public.cmake
cmake/modules/: FindMaterialX.cmake  FindOpenEXR.cmake
extras/usd/js_bindings/: CMakeLists.txt
js/: README.md  package-lock.json  package.json  test.html  usd.mjs
js/__tests__/: stage.spec.js
pxr/base/arch/: CMakeLists.txt  assumptions.cpp  defines.h  fileSystem.cpp  fileSystem.h  library.cpp  mallocHook.cpp  math.h  stackTrace.cpp  symbols.cpp  timing.cpp  timing.h
pxr/base/gf/: CMakeLists.txt  vec2d.h  vec2f.h  vec2i.h  vec3d.h  vec3f.h  vec3i.h  vec4d.h  vec4f.h  vec4i.cpp  vec4i.h
pxr/base/tf/: CMakeLists.txt  emscriptenTypeRegistration.h  fileUtils.h  pointerAndBits.h  pyLock.h  pyTracing.h
pxr/base/vt/: CMakeLists.txt  value.cpp  value.h  valueFromPython.h
pxr/imaging/garch/: CMakeLists.txt  glPlatformContextEmscripten.cpp  glPlatformContextEmscripten.h  glPlatformDebugWindowEmscripten.cpp
pxr/imaging/hd/: CMakeLists.txt  texture.cpp  unitTestNullRenderDelegate.cpp
pxr/imaging/hdSt/: codeGen.cpp  codeGen.h  interleavedMemoryManager.cpp  materialNetwork.cpp  materialXFilter.cpp  mesh.cpp  meshShaderKey.cpp  meshShaderKey.h  package.cpp  resourceBinder.cpp
pxr/imaging/hdSt/shaders/: mesh.glslfx  (+1 more)
pxr/imaging/hgi/: CMakeLists.txt  accelerationStructure.cpp  accelerationStructure.h  accelerationStructureCmds.cpp  accelerationStructureCmds.h  buffer.cpp  buffer.h  enums.h  hgi.cpp  hgi.h  rayTracingCmds.cpp  rayTracingCmds.h  rayTracingPipeline.cpp  rayTracingPipeline.h  resourceBindings.cpp  resourceBindings.h  shaderSection.h  tokens.h
pxr/imaging/hgiGL/: pch.h
pxr/imaging/hgiInterop/: CMakeLists.txt  cpu.cpp  hgiInterop.cpp  hgiInterop.h  vulkan.cpp
pxr/imaging/hgiVulkan/: CMakeLists.txt  accelerationStructure.cpp  accelerationStructure.h  accelerationStructureCmds.cpp  accelerationStructureCmds.h  buffer.cpp  buffer.h  capabilities.cpp  commandBuffer.h  commandQueue.cpp  commandQueue.h  conversions.cpp  conversions.h  device.cpp  device.h  garbageCollector.cpp  garbageCollector.h  graphicsCmds.cpp  graphicsPipeline.cpp  hgi.cpp  hgi.h  instance.cpp  rayTracingCmds.cpp  rayTracingCmds.h  rayTracingPipeline.cpp  rayTracingPipeline.h  resourceBindings.cpp  resourceBindings.h  sampler.cpp  shaderCompiler.cpp  shaderCompiler.h  shaderFunction.cpp  shaderFunction.h  shaderGenerator.cpp  shaderSection.cpp  shaderSection.h  spirv_reflect.h  texture.cpp  texture.h  vk_mem_alloc.h
pxr/imaging/hgiWebGPU/: CMakeLists.txt  README.md  blitCmds.cpp  hgi.cpp  mipmapGenerator.cpp  shaderFunction.cpp
pxr/imaging/hio/: pch.h
pxr/usd/ar/: pyResolverContext.h
pxr/usd/pcp/: CMakeLists.txt
pxr/usd/sdf/: CMakeLists.txt  path.h  pathNode.cpp  wrapPathJs.h
pxr/usd/sdr/: shaderMetadataHelpers.h
pxr/usd/usd/: CMakeLists.txt  crateFile.cpp  emscriptenPtrRegistrationHelper.h  primData.cpp  stage.cpp  wrapPrimJs.cpp  wrapStageJs.cpp
pxr/usd/usdGeom/: CMakeLists.txt
pxr/usd/usdLux/: CMakeLists.txt
pxr/usd/usdMedia/: pch.h
pxr/usd/usdShade/: CMakeLists.txt
pxr/usdImaging/: CMakeLists.txt
pxr/usdImaging/hdEmscripten/: CMakeLists.txt  webRenderDelegate.cpp  webRenderDelegate.h
pxr/usdImaging/hdEmscripten/js/: ThreeJsRenderDelegate.js
pxr/usdImaging/hdEmscripten/testenv/: test.html
pxr/usdImaging/usdAppUtils/: pch.h
pxr/usdImaging/usdImaging/: CMakeLists.txt
pxr/usdImaging/usdImagingGL/: CMakeLists.txt  engine.cpp  engine.h  legacyEngine.cpp
usd_for_web_demos/: ThreeJsRenderDelegate.js  test.html
(+27 files in other folders)
